--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "serve-vue": "vue-cli-service serve",
+    "serve-lambda": "netlify-lambda serve src/lambda",
+    "serve-both": "netlify-lambda serve src/lambda & vue-cli-service serve",
+    "build": "netlify-lambda build src/lambda & vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -26,9 +28,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.1.2",
-    "netlify-lambda": "^1.6.3",
     "sass": "^1.25.0",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-netlify-lambda": "^0.1.1",
     "vue-template-compiler": "^2.6.11"
   }
 }
